Fix Valkey service in docker compose
